--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,21 @@
     "require": {
         "silex/silex": "~1.2",
         "doctrine/dbal": "~2.4",
-        "twig/twig": "~1.16"
+        "twig/twig": "~1.16",
+        "symfony/twig-bridge": "2.7.*",
+        "symfony/security": "2.7.*",
+        "symfony/form": "2.7.*",
+        "symfony/translation": "2.7.*",
+        "symfony/config": "2.7.*",
+        "twig/extensions": "v1.3.0",
+        "symfony/validator": "2.7.*",
+        "symfony/monolog-bridge": "2.7.*",
+        "silex/web-profiler": "1.0.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*",
+        "symfony/browser-kit": "2.7.*",
+        "symfony/css-selector": "2.7.*"
     },
     "autoload": {
         "psr-4": {"WebLinks\\": "src"}
